# rinha-backend-meia-boca

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240522_033905_create_users_table.rs  m20240523_042709_create_wallets_table.rs  m20240523_050236_create_transactions_table.rs
src/: errors.rs  main.rs  routes.rs
src/controllers/: auth_controller.rs  mod.rs  transaction_controller.rs  user_controller.rs  wallet_controller.rs
src/entity/: mod.rs  transaction.rs  user.rs  wallet.rs
src/helpers/: encrypt.rs  jwt.rs  mod.rs
src/middlewares/: auth_middleware.rs
src/schemas/: auth_schema.rs  mod.rs  transaction_schema.rs  user_schema.rs  wallet_schema.rs
src/services/: mod.rs  transaction_service.rs  user_service.rs  wallet_service.rs
