[package]
name = "rinha-backend-meia-boca"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
bcrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8"
env_logger = "0.10"
dotenv = "0.15.0"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
chrono = "0.4"
sea-orm = "0.12.15"
sea-orm-macros = "0.12.15"
migration = { path = "./migration" }

[workspace]
members = [".", "migration"]
